--- a/backend/src/main/webapp/app/views/forecast/main.html
+++ b/backend/src/main/webapp/app/views/forecast/main.html
@@ -213,11 +213,15 @@
 							      	
 							      	<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['appointDate'] | date:gb_dateFormat }}</td>
 									
-									<td style="vertical-align: middle; text-align: right; white-space: nowrap;">{{ data['appointAmount'] | number:2 }}</td>
+									<td style="vertical-align: middle; text-align: right; white-space: nowrap;">
+										<span class="label" style="color: black; background-color: rgba(229, 181, 20, 0.7); font-size: 13px;">{{ data['appointAmount'] | number:2 }}</span>
+									</td>
 									
 									<td style="vertical-align: middle; text-align: right; white-space: nowrap;">{{ data['forecastPercentage'] ? (data['forecastPercentage'] + '%') : '' }}</td>
 									
-									<td style="vertical-align: middle; text-align: right; white-space: nowrap;">{{ data['paidAmount'] | number:2 }}</td>
+									<td style="vertical-align: middle; text-align: right; white-space: nowrap;">
+										<span class="label" style="color: black; background-color: rgba(82, 190, 128, 0.7); font-size: 13px;">{{ data['paidAmount'] | number:2 }}</span>
+									</td>
 									
 									<td style="vertical-align: middle; text-align: left; white-space: nowrap;">{{ data['comment'] }}</td>
 									
