--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -49,7 +49,7 @@
 		  	</div>
 		</div>
 		
-		<button type="button" class="btn btn-danger btn-outline pull-right" ng-click="disable()">ยุติการติดตาม</button>
+		<button type="button" class="btn btn-danger btn-outline pull-right" ng-click="disable()" ng-disabled="!isEditable">ยุติการติดตาม</button>
 	
 	</div>
 </div>	
