--- a/backend/src/main/webapp/app/views/forecast/main.html
+++ b/backend/src/main/webapp/app/views/forecast/main.html
@@ -55,7 +55,7 @@
 									  
 									  
 									  
-									  <div class="pull-right" ng-show="group2">
+									  <div class="pull-right">
 									  	  <div class="dropdown pull-right">
 										      <button class="btn btn-outline btn-primary" type="button" data-toggle="dropdown" data-submenu="">
 										        <i class="fa fa-download"></i> Export <span class="caret"></span>
