--- a/backend/src/main/webapp/app/views/dashboard/home.html
+++ b/backend/src/main/webapp/app/views/dashboard/home.html
@@ -24,7 +24,7 @@
 								    	   ng-model="formData.dateFrom" placeholder="วันที่เริ่มต้น" ng-change="dateFromChange()" my-datepicker="dateConf">
 								    <span class="input-group-addon">ถึง</span>
 								    <input type="text" id="dateTo_traceCount" class="form-control input-sm" readonly="readonly" date-parser="dd/MM/yyyy" 
-								    	   ng-model="formData.dateTo" placeholder="วันที่สิ้นสุด" ng-change="traceCount()" my-datepicker="dateConf">
+								    	   ng-model="formData.dateTo" placeholder="วันที่สิ้นสุด" ng-change="dateToChange()" my-datepicker="dateConf">
 								</div>
 							</div>
 						</div>
