--- a/backend/src/main/webapp/app/views/db_backup_show/main.html
+++ b/backend/src/main/webapp/app/views/db_backup_show/main.html
@@ -30,7 +30,7 @@
 									  <div class="form-group input-group">
 									  	<span class="input-group-addon"><i class="fa fa-server"></i></span>
 									  	<select name="column" class="form-control" ng-model="dir" 
-									  	       ng-options="option as option for option in dirList" ng-change="search()" ng-disabled="isSystemFile"></select>
+									  	       ng-options="option as option for option in dirList" ng-change="search()" ng-disabled="isSystemFile || isLogFile"></select>
 									  </div>
 									  
 									</div>
