--- a/backend/src/main/webapp/app/views/tools/fileConvert.html
+++ b/backend/src/main/webapp/app/views/tools/fileConvert.html
@@ -51,8 +51,12 @@
 	            <div class="col-lg-12">
 	            	<div class="form-inline pull-right">
 		            	<div class="form-group input-group" ng-show="isEncodingShow">
+						  	<span class="input-group-addon">Splitter</span>
+						  	<select name="splitter" class="form-control" ng-model="splitter" ng-options="option.code as option.name for option in splitters"></select>
+				  		</div>
+		            	<div class="form-group input-group" ng-show="isEncodingShow">
 						  	<span class="input-group-addon">Encoding</span>
-						  	<select name="column" class="form-control" ng-model="encoding" ng-options="option.code as option.name for option in encodings"></select>
+						  	<select name="encoding" class="form-control" ng-model="encoding" ng-options="option.code as option.name for option in encodings"></select>
 				  		</div>
 	            		<input type="file" class="form-control" nv-file-select="" uploader="uploader" />	  
 				  	</div>
