--- a/backend/src/main/webapp/app/views/tools/main.html
+++ b/backend/src/main/webapp/app/views/tools/main.html
@@ -30,9 +30,9 @@
 					        			goto="dashboard.tools.fileConvert({type: 1, desc: 'Excel to Text'})" 
 					        			desc="แปลง excel file เป็น text file"></tools-menu>
 					        			
-					        <tools-menu comments="Pdf to Image" colour="red" type="random" 
-					        			goto="dashboard.tools.fileConvert({type: 2, desc: 'Pdf to Image'})" 
-					        			desc="แปลง pdf file เป็น รูปภาพ"></tools-menu>
+					        <tools-menu comments="Document to Image" colour="red" type="random" 
+					        			goto="dashboard.tools.fileConvert({type: 2, desc: 'Document to Image'})" 
+					        			desc="แปลงไฟล์เอกสารเป็นรูปภาพ"></tools-menu>
 					
 					    </div>
                 	</div>
