--- a/backend/src/main/webapp/app/styles/checkAnimate.css
+++ b/backend/src/main/webapp/app/styles/checkAnimate.css
@@ -1,12 +1,12 @@
-.checkbox label:after, 
-.radio label:after {
+.checkbox_animate label:after, 
+.radio_animate label:after {
     content: '';
     display: table;
     clear: both;
 }
 
-.checkbox .cr,
-.radio .cr {
+.checkbox_animate .cr,
+.radio_animate .cr {
     position: relative;
     display: inline-block;
     border: 1px solid #a9a9a9;
@@ -17,12 +17,12 @@
     margin-right: .5em;
 }
 
-.radio .cr {
+.radio_animate .cr {
     border-radius: 50%;
 }
 
-.checkbox .cr .cr-icon,
-.radio .cr .cr-icon {
+.checkbox_animate .cr .cr-icon,
+.radio_animate .cr .cr-icon {
     position: absolute;
     font-size: .8em;
     line-height: 0;
@@ -30,29 +30,29 @@
     left: 20%;
 }
 
-.radio .cr .cr-icon {
+.radio_animate .cr .cr-icon {
     margin-left: 0.04em;
 }
 
-.checkbox label input[type="checkbox"],
-.radio label input[type="radio"] {
+.checkbox_animate label input[type="checkbox"],
+.radio_animate label input[type="radio"] {
     display: none;
 }
 
-.checkbox label input[type="checkbox"] + .cr > .cr-icon,
-.radio label input[type="radio"] + .cr > .cr-icon {
+.checkbox_animate label input[type="checkbox"] + .cr > .cr-icon,
+.radio_animate label input[type="radio"] + .cr > .cr-icon {
     transform: scale(3) rotateZ(-20deg);
     opacity: 0;
     transition: all .3s ease-in;
 }
 
-.checkbox label input[type="checkbox"]:checked + .cr > .cr-icon,
-.radio label input[type="radio"]:checked + .cr > .cr-icon {
+.checkbox_animate label input[type="checkbox"]:checked + .cr > .cr-icon,
+.radio_animate label input[type="radio"]:checked + .cr > .cr-icon {
     transform: scale(1) rotateZ(0deg);
     opacity: 1;
 }
 
-.checkbox label input[type="checkbox"]:disabled + .cr,
-.radio label input[type="radio"]:disabled + .cr {
+.checkbox_animate label input[type="checkbox"]:disabled + .cr,
+.radio_animate label input[type="radio"]:disabled + .cr {
     opacity: .5;
 }
