--- a/backend/src/main/webapp/app/views/tunnel/main.html
+++ b/backend/src/main/webapp/app/views/tunnel/main.html
@@ -1,3 +1,11 @@
+<style>
+.editable-wrap {
+    width: 100%;
+}
+.editable-controls {
+	width: 100%;
+}
+</style>
 <div>
 	<div class="row">
 		<div class="col-lg-12">
@@ -116,20 +124,28 @@
 						<table class="table table-striped table-hover" style="margin: 0;">
 							<thead>
 								<tr style="color: #337AB7;">
-									<th width="10%">#</th>
-									<th width="45%">File Name</th>
-									<th width="15%">File Size(MB)</th>
-									<th width="15%">Upload Date</th>
-									<th width="15%"></th>
+									<th width="5%">#</th>
+									<th width="20%">File Name</th>
+									<th>Command</th>
+									<th width="10%">File Size(MB)</th>
+									<th width="10%">Upload Date</th>
+									<th width="10%"></th>
 								</tr>
 							<thead>
 							<tbody>
 								<tr ng-repeat="data in datas track by $index" style="color: #337AB7;">
-									<td>{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
-									<td>{{ data.fileName }}</td>
-									<td>{{ data.fileSize }}</td>
-									<td>{{ data.createdDateTime | date:gb_dateTimeFormat }}</td>
-									<td>
+									<td style="white-space: nowrap">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
+									<td style="white-space: nowrap">{{ data.fileName }}</td>
+									
+									<td style="white-space: nowrap">
+										<a href="#" e-class="form-control" buttons="no" onaftersave="updateCommand(data)" editable-text="data.command" e-style="width: 100%;"> 
+											{{ data.command || 'empty'}} 
+										</a>
+									</td>
+									
+									<td style="white-space: nowrap">{{ data.fileSize }}</td>
+									<td style="white-space: nowrap">{{ data.createdDateTime | date:gb_dateTimeFormat }}</td>
+									<td style="white-space: nowrap">
 										<i title="Delete" class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteItem(data.id)"></i>&emsp; 
 										<i title="Download" class="fa fa-download fa-lg user-action-icon-primary" ng-click="download(data.id)"></i>&emsp;
 										<i title="Deploy" class="fa fa-plane fa-lg user-action-icon-primary" ng-click="deploy(data.id)"></i>
