--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -121,19 +121,24 @@
 		
 		&nbsp;&nbsp;&nbsp;
 		<div class="btn-group" style="margin: 3px 0 3px 0;">
-		  <button type="button" class="btn btn-primary btn-outline" title="ก่อนหน้า" style="padding: 5px 13px 5px 5px;" ng-click="nextPrev(false, true)" ng-disabled="(firstTaskDetailId == idActive) || (taskDetails.length == 0)">
-		  	<i class="fa fa-hand-o-left fa-1x"></i>
-		  </button>
-		  <button type="button" class="btn btn-primary btn-outline" title="ถัดไป" style="padding: 5px 5px 5px 13px;" ng-click="nextPrev(true, true)" ng-disabled="(lastTaskDetailId == idActive) || (taskDetails.length == 0)">
-		  	<i class="fa fa-hand-o-right fa-1x"></i>
-		  </button>
-		</div>
+			<button type="button" class="btn btn-primary btn-outline" title="ก่อนหน้า" style="padding: 5px 13px 5px 5px;" ng-click="nextPrev(false, true)" ng-disabled="(firstTaskDetailId == idActive) || (taskDetails.length == 0)">
+		  		<i class="fa fa-hand-o-left fa-1x"></i>
+		  	</button>
+		  	<button type="button" class="btn btn-primary btn-outline" title="ถัดไป" style="padding: 5px 5px 5px 13px;" ng-click="nextPrev(true, true)" ng-disabled="(lastTaskDetailId == idActive) || (taskDetails.length == 0)">
+		  		<i class="fa fa-hand-o-right fa-1x"></i>
+		  	</button>
 		
-		&nbsp;&nbsp;&nbsp;
-	  	<button type="button" class="btn btn-primary" title="{{ isOutOfWorkingTime ? 'นอกเวลาทำงาน' : 'บันทึกผลการติดตาม' }}" 
-	  		    style="padding: 5px 15px 5px 15px;" ng-click="askModal()" ng-show="lastTabActionMenuActive.id == 1" ng-disabled="isOutOfWorkingTime || (taskDetails.length == 0) || askModalObj.isOldTrace">
-			<i class="fa fa fa-plus fa-1x"></i>
-		</button>
+			<span class="btn btn-outline" style="padding: 5px 20px 5px 20px; cursor: default; border-color: #969696; background-color: #C3C3C3">
+				&nbsp;
+				<!-- <i class="fa fa-bolt fa-1x"></i> -->
+			</span>
+		
+			<!-- &nbsp;&nbsp;&nbsp; -->
+		  	<button type="button" class="btn btn-primary" title="{{ isOutOfWorkingTime ? 'นอกเวลาทำงาน' : 'บันทึกผลการติดตาม' }}"
+		  		    style="padding: 5px 15px 5px 15px;" ng-click="askModal()" ng-disabled="isOutOfWorkingTime || (taskDetails.length == 0) || askModalObj.isOldTrace || lastTabActionMenuActive.id != 1">
+				<i class="fa fa fa-plus fa-1x"></i>
+			</button>
+		</div>
 		
 	</div>
 	<div class="col-lg-12" style="min-height: 315px;" ng-include="lastTabActionMenuActive.url"></div>
