--- a/backend/src/main/webapp/app/views/user/search.html
+++ b/backend/src/main/webapp/app/views/user/search.html
@@ -74,8 +74,9 @@
 				<td>{{ u.username }}</td>
 				<td>{{ u.authorities[0].authority.substring(5, 6).toUpperCase() + u.authorities[0].authority.substring(5).toLowerCase().slice(1) }}</td>
 				<td>
-					<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="u.enabled"></i>
-					<i class="fa  fa-minus-circle fa-lg user-status-disabled-icon" ng-hide="u.enabled"></i>
+					<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="u.enabled" title="เปิด"></i>
+					<i class="fa  fa-minus-circle fa-lg user-status-disabled-icon" ng-hide="u.enabled" title="ปิด"></i>
+					&nbsp;<i class="fa fa-graduation-cap fa-lg" ng-show="u.probation" title="Probation"></i>
 				</td>
 				<td>{{ u.createdDateTime | date : gb_dateTimeFormat }}</td>
 				<td>
