--- a/backend/src/main/webapp/app/views/payment/detail.html
+++ b/backend/src/main/webapp/app/views/payment/detail.html
@@ -1,19 +1,109 @@
-<div class="alert alert-info form-group input-group" style="padding-top: 3px; padding-bottom: 3px; margin-bottom: 3px;">
-	<span class="input-group-addon" style="border: 0px; background: none; color: #337AB7;">
-		{{'pagination.page' | translate}}: {{formData.currentPage}} {{'pagination.of' | translate}} {{ numPages | number:0 }} ({{'pagination.total' | translate}} {{ totalItems | number:0 }} {{'pagination.items' | translate}})
-	</span>
-	<pagination ng-change="pageChanged()" total-items="totalItems"
-				first-text="{{'pagination.first' | translate}}"
-				previous-text="{{'pagination.previous' | translate}}"
-				next-text="{{'pagination.next' | translate}}"
-				last-text="{{'pagination.last' | translate}}"
-				ng-model="formData.currentPage" items-per-page="formData.itemsPerPage"
-				max-size="maxSize" class="pagination-sm pull-right" boundary-links="true"
-				rotate="false" num-pages="numPages" style="margin: auto;" />
-	<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none; color: #337AB7;">
-		<select style="height: 28px;" ng-options="option for option in [5,10,20,30,40,50,100] track by option" ng-model="formData.itemsPerPage" ng-change="changeItemPerPage()"></select>&nbsp;{{'pagination.per_page' | translate}}								
-	</span>
+<div class="panel panel-info" style="margin: 0;">
+	<div class="panel-heading">
+		<form class="form-inline" ng-submit="search()" name="searchForm" novalidate>
+			<div class="row">
+				<div class="col-lg-12">
+				
+				  <div class="form-group input-group" ng-show="group2">
+				  	<span class="input-group-addon"><i class="fa fa-user"></i></span>
+				  	<select name="column" class="form-control" ng-model="formData.owner" ng-options="option.id as option.showname for option in users" ng-change="search()">
+						<option value="">--ทั้งหมด--</option>
+			  		</select>
+				  </div>
+				  
+				  <div class="form-group input-group">
+				   	<span class="input-group-addon"><i class="fa fa-search"></i></span>
+				    <input type="text" class="form-control" placeholder="keyword search" ng-model="formData.keyword" style="width: 150px;">
+				  </div>
+				  
+				  <div class="input-group input-daterange">
+				  	<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+				  	<select name="dateColumnName" class="form-control" ng-model="formData.dateColumnName" 
+				  	        ng-options="option.col as option.text for option in dateColumnNames" style="width: 180px;" ng-change="dateColumnNameChanged()">
+						<option value="">--เลือกวันที่--</option>
+			  		</select>
+				    <input type="text" id="dateFrom" name="dateFrom" class="form-control" 
+				    	   ng-disabled="!formData.dateColumnName" readonly="readonly" date-parser="dd/MM/yyyy" 
+				    	   style="width: 120px;" ng-model="formData.dateFrom" ng-change="dateFromChange()" placeholder="วันที่เริ่มต้น">
+				    <span class="input-group-addon">ถึง</span>
+				    <input type="text" id="dateTo" name="dateTo" class="form-control" 
+				    	   ng-disabled="!formData.dateColumnName" readonly="readonly" date-parser="dd/MM/yyyy" 
+				    	   style="width: 120px;" ng-model="formData.dateTo" ng-change="dateToChange()" placeholder="วันที่สิ้นสุด">
+				  </div>
+				  
+				  &nbsp;&nbsp;
+				  <button type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">{{'user.search.clear_btn' | translate}}</button>
+			   	  <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
+				  
+				  
+				  
+				  <div class="pull-right">
+				  	  <div class="dropdown pull-right">
+					      <button class="btn btn-outline btn-primary" type="button" data-toggle="dropdown" data-submenu="">
+					        <i class="fa fa-download"></i> Export <span class="caret"></span>
+					      </button>
+					
+					      <ul class="dropdown-menu dropdown-menu-right">
+					      	 <li ng-show="uploadTemplates.length == 1">
+					      		<a tabindex="0" href="" ng-click="exportResult(uploadTemplates[0].id, true)">
+					      			<i class="fa fa-file-excel-o"></i> รายการล่าสุด
+					      		</a>
+					      	 </li>
+					      
+							  <li class="dropdown-submenu" style="cursor: default;" ng-show="uploadTemplates.length > 1">
+								  <a tabindex="0"><i class="fa fa-file-excel-o"></i> รายการล่าสุด</a>
+								  
+								  <ul class="dropdown-menu">
+								  	<li ng-repeat="u in uploadTemplates">
+								  		<a tabindex="0" href="" ng-click="exportResult(u.id, true)">{{ u.templateName }}</a>
+								  	</li>
+								  </ul>
+							  </li>
+							  
+							  <li ng-show="uploadTemplates.length == 1">
+					      		<a tabindex="0" href="" ng-click="exportResult(uploadTemplates[0].id, false)">
+					      			<i class="fa fa-file-excel-o"></i> ทั้งหมด
+					      		</a>
+					      	  </li>
+							  <li class="dropdown-submenu" style="cursor: default;" ng-show="uploadTemplates.length > 1">
+							  	  <a tabindex="0"><i class="fa fa-file-excel-o"></i> ทั้งหมด</a>
+							  	  
+							  	  <ul class="dropdown-menu">
+							  	  	<li ng-repeat="u in uploadTemplates">
+							  	  		<a tabindex="0" href="" ng-click="exportResult(u.id, false)">{{ u.templateName }}</a>
+							  	  	</li>
+								  </ul>
+							  </li>
+						  </ul>
+					  </div>
+						 
+				   </div>
+				</div>
+			</div>
+		</form>
+	</div>
+
+	<div class="alert alert-info form-group input-group" style="padding-top: 3px; padding-bottom: 3px; margin: 3px;">
+		<span class="input-group-addon" style="border: 0px; background: none; color: #337AB7;">
+			{{'pagination.page' | translate}}: {{formData.currentPage}} {{'pagination.of' | translate}} {{ numPages | number:0 }} ({{'pagination.total' | translate}} {{ totalItems | number:0 }} {{'pagination.items' | translate}})
+		</span>
+		<pagination ng-change="pageChanged()" total-items="totalItems"
+						first-text="{{'pagination.first' | translate}}"
+						previous-text="{{'pagination.previous' | translate}}"
+						next-text="{{'pagination.next' | translate}}"
+						last-text="{{'pagination.last' | translate}}"
+						ng-model="formData.currentPage" items-per-page="formData.itemsPerPage"
+						max-size="maxSize" class="pagination-sm pull-right" boundary-links="true"
+						rotate="false" num-pages="numPages" style="margin: auto;" />
+		<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none; color: #337AB7;">
+			<select style="height: 28px;" ng-options="option for option in [5,10,20,30,40,50,100] track by option" ng-model="formData.itemsPerPage" ng-change="changeItemPerPage()"></select>&nbsp;{{'pagination.per_page' | translate}}								
+		</span>
+	</div>
 </div>
+					
+					
+					
+					
 					
 <div class="table-responsive">
 	<table class="table table-striped table-hover table-bordered" style="margin: 0;">
