--- a/backend/src/main/webapp/app/views/payment/detail.html
+++ b/backend/src/main/webapp/app/views/payment/detail.html
@@ -18,16 +18,12 @@
 				  
 				  <div class="input-group input-daterange">
 				  	<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-				  	<select name="dateColumnName" class="form-control" ng-model="formData.dateColumnName" 
-				  	        ng-options="option.col as option.text for option in dateColumnNames" style="width: 180px;" ng-change="dateColumnNameChanged()">
-						<option value="">--เลือกวันที่--</option>
-			  		</select>
 				    <input type="text" id="dateFrom" name="dateFrom" class="form-control" 
-				    	   ng-disabled="!formData.dateColumnName" readonly="readonly" date-parser="dd/MM/yyyy" 
+				    	   readonly="readonly" date-parser="dd/MM/yyyy" 
 				    	   style="width: 120px;" ng-model="formData.dateFrom" ng-change="dateFromChange()" placeholder="วันที่เริ่มต้น">
 				    <span class="input-group-addon">ถึง</span>
 				    <input type="text" id="dateTo" name="dateTo" class="form-control" 
-				    	   ng-disabled="!formData.dateColumnName" readonly="readonly" date-parser="dd/MM/yyyy" 
+				    	   readonly="readonly" date-parser="dd/MM/yyyy" 
 				    	   style="width: 120px;" ng-model="formData.dateTo" ng-change="dateToChange()" placeholder="วันที่สิ้นสุด">
 				  </div>
 				  
@@ -40,43 +36,9 @@
 				  <div class="pull-right">
 				  	  <div class="dropdown pull-right">
 					      <button class="btn btn-outline btn-primary" type="button" data-toggle="dropdown" data-submenu="">
-					        <i class="fa fa-download"></i> Export <span class="caret"></span>
+					        <i class="fa fa-download"></i> Export
 					      </button>
-					
-					      <ul class="dropdown-menu dropdown-menu-right">
-					      	 <li ng-show="uploadTemplates.length == 1">
-					      		<a tabindex="0" href="" ng-click="exportResult(uploadTemplates[0].id, true)">
-					      			<i class="fa fa-file-excel-o"></i> รายการล่าสุด
-					      		</a>
-					      	 </li>
-					      
-							  <li class="dropdown-submenu" style="cursor: default;" ng-show="uploadTemplates.length > 1">
-								  <a tabindex="0"><i class="fa fa-file-excel-o"></i> รายการล่าสุด</a>
-								  
-								  <ul class="dropdown-menu">
-								  	<li ng-repeat="u in uploadTemplates">
-								  		<a tabindex="0" href="" ng-click="exportResult(u.id, true)">{{ u.templateName }}</a>
-								  	</li>
-								  </ul>
-							  </li>
-							  
-							  <li ng-show="uploadTemplates.length == 1">
-					      		<a tabindex="0" href="" ng-click="exportResult(uploadTemplates[0].id, false)">
-					      			<i class="fa fa-file-excel-o"></i> ทั้งหมด
-					      		</a>
-					      	  </li>
-							  <li class="dropdown-submenu" style="cursor: default;" ng-show="uploadTemplates.length > 1">
-							  	  <a tabindex="0"><i class="fa fa-file-excel-o"></i> ทั้งหมด</a>
-							  	  
-							  	  <ul class="dropdown-menu">
-							  	  	<li ng-repeat="u in uploadTemplates">
-							  	  		<a tabindex="0" href="" ng-click="exportResult(u.id, false)">{{ u.templateName }}</a>
-							  	  	</li>
-								  </ul>
-							  </li>
-						  </ul>
 					  </div>
-						 
 				   </div>
 				</div>
 			</div>
@@ -110,7 +72,10 @@
 		<thead>
 			<tr>
 				<th style="white-space: nowrap; text-align: center; color: #337AB7;">#</th>
-				<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center; color: #337AB7;">
+				<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center; color: #337AB7; padding-left: 30px; padding-right: 30px;">
+						{{ h.columnNameAlias || h.columnName }}
+				</th>
+				<th ng-repeat="h in taskDetailHeaders" style="white-space: nowrap; text-align: center; color: #337AB7; padding-left: 30px; padding-right: 30px;">
 						{{ h.columnNameAlias || h.columnName }}
 				</th>
 			</tr>
@@ -122,6 +87,12 @@
 					{{ 
 					   h.dataType == 'date' ? (data[h.columnName] | date:gb_dateFormat) : 
 					   h.dataType == 'num' ? (data[h.columnName] | number:2) : data[h.columnName] 
+					}}
+				</td>
+				<td ng-repeat="h in taskDetailHeaders" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
+					{{ 
+					   h.dataType == 'date' ? (data.taskDetail[h.columnName] | date:gb_dateFormat) : 
+					   h.dataType == 'num' ? (data.taskDetail[h.columnName] | number:2) : data.taskDetail[h.columnName] 
 					}}
 				</td>
 			</tr>
