--- a/backend/src/main/webapp/app/views/payment/detail.html
+++ b/backend/src/main/webapp/app/views/payment/detail.html
@@ -35,7 +35,7 @@
 				  
 				  <div class="pull-right">
 				  	  <div class="dropdown pull-right">
-					      <button class="btn btn-outline btn-primary" type="button" data-toggle="dropdown" data-submenu="">
+					      <button class="btn btn-outline btn-primary" type="button" ng-click="exportResult()">
 					        <i class="fa fa-download"></i> Export
 					      </button>
 					  </div>
